--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +18,8 @@
             Skype: arnulfo anaya p <br>
         </p>
         <h2>Fase Del Proyecto</h2>
-        <a href="fase2/design.html">Fase 2</a>
+        <a href="fase2/design.html">Fase 2</a><br>
+        <a href="fase3/Index.html">Fase 3</a><br>
 
 </body>
 </html>
